<resources>
    <string name="N_A">N/A</string>
    <string name="ab">AB</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_calibration">About Calibration</string>
    <string name="about_calibration_description">"Your next sensor reading will reflect the calibration you just entered.

You can see your calibrations in the History tab's event log."</string>
    <string name="about_copyright">© %1$s Dexcom, Inc.</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_eu_address">"MDSS GmbH
Schiffgraben 41
30175 Hannover, Germany"</string>
    <string name="about_europe">Europe</string>
    <string name="about_gtin_title">GTIN</string>
    <string name="about_insulin">About Insulin</string>
    <string name="about_note">About Note</string>
    <string name="about_note_info">Add a short note to help you keep track of a health event or a change in your glucose management that might affect your glucose</string>
    <string name="about_note_info_2">Notes will be processed by Dexcom in accordance with our Privacy Policy. For more information about privacy, view our</string>
    <string name="about_note_privacy_policy">Privacy Policy</string>
    <string name="about_privacy_policy_title">Privacy Policy</string>
    <string name="about_regulatory_certification">Regulatory Certification</string>
    <string name="about_software_number_title">Software Number</string>
    <string name="about_software_revision_title">Software Revision</string>
    <string name="about_supported_systems_title">Supported Systems</string>
    <string name="about_terms_of_use_title">Terms of Use</string>
    <string name="about_uk_address">"MDSS-UK RP LIMITED
6 Wilmslow Road,
Rusholme,
Manchester M14 5TP
United Kingdom
"</string>
    <string name="about_united_kingdom">United Kingdom</string>
    <string name="above">above</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="account">Account</string>
    <string name="acm_error_description">We are unable to verify the compatibility of your phone with the Dexcom ONE CGM system at this time. Please make sure that your phone is connected to the internet.</string>
    <string name="acm_error_description_g7">"We are unable to verify the compatibility of your phone with the Dexcom G7 CGM system at this time.

Please make sure that your phone is connected to the internet."</string>
    <string name="activated_on">Activated On</string>
    <string name="activity">Activity</string>
    <string name="activity_date_field">Activity DatePicker</string>
    <string name="activity_deleted">Activity deleted</string>
    <string name="activity_description">Duration and intensity</string>
    <string name="activity_duration_field">Activity Duration Control</string>
    <string name="activity_heavy_intensity">Heavy</string>
    <string name="activity_heavy_intensity_full">Heavy intensity</string>
    <string name="activity_intensity_field">Activity Intensity Control</string>
    <string name="activity_intensity_heavy_field">Activity Intensity Heavy Control</string>
    <string name="activity_intensity_light_field">Activity Intensity Light Control</string>
    <string name="activity_intensity_medium_field">Activity Intensity Medium Control</string>
    <string name="activity_intensity_title">Intensity</string>
    <string name="activity_light_intensity">Light</string>
    <string name="activity_light_intensity_full">Light intensity</string>
    <string name="activity_light_intensity_placeholder">Light intensity</string>
    <string name="activity_medium_intensity">Medium</string>
    <string name="activity_medium_intensity_full">Medium intensity</string>
    <string name="activity_saved">Activity saved</string>
    <string name="activity_time_field">Activity TimePicker</string>
    <string name="activity_updated">Activity updated</string>
    <string name="add_event">Add Event</string>
    <string name="add_second_alert_profile">Add Second Alert Profile</string>
    <string name="adult_age">All people ages 2 years and older</string>
    <string name="adult_sensor_site">Can use the abdomen or back of arm</string>
    <string name="after_setup_customize_alert">After setup, you can customize alert settings in <b>Profile > Alerts.</b></string>
    <string name="alcohol_wipe">Alcohol Wipe (not included)</string>
    <string name="alert_detail_note_no_override">Dexcom ONE alerts will <b>NOT</b> override your phone settings.</string>
    <string name="alert_detail_note_silent">You will NOT hear or feel alerts if your phone is set to silent.</string>
    <string name="alert_high_description">Alerts you when your sensor reading is at or above the set level.</string>
    <string name="alert_high_dialog_description">Alerts you when your sensor reading is at or above this level.</string>
    <string name="alert_high_line_description">"It's the yellow line on the glucose graph."</string>
    <string name="alert_hours_and_mins">%1$s %2$s</string>
    <string name="alert_low_description">Alerts you when your sensor reading is at or below the set level.</string>
    <string name="alert_low_dialog_description">Alerts you when your sensor reading is at or below this level.</string>
    <string name="alert_low_line_description">"It's the red line on the glucose graph."</string>
    <string name="alert_match_option_description_brief_sensor_issue">Depending on the phone sound settings, alerts will vibrate or sound.</string>
    <string name="alert_match_option_description_falling_fast">@string/alert_match_option_description_brief_sensor_issue</string>
    <string name="alert_match_option_description_high">@string/alert_match_option_description_brief_sensor_issue</string>
    <string name="alert_match_option_description_low">@string/alert_match_option_description_brief_sensor_issue</string>
    <string name="alert_match_option_description_rising_fast">@string/alert_match_option_description_brief_sensor_issue</string>
    <string name="alert_match_option_description_signal_loss">@string/alert_match_option_description_brief_sensor_issue</string>
    <string name="alert_sound_cell_title">Alert Sound</string>
    <string name="alerts_sounds_baby_cry">Baby Cry</string>
    <string name="alerts_sounds_beep">Beep</string>
    <string name="alerts_sounds_blamo_dings">Blamo Dings</string>
    <string name="alerts_sounds_buzzer_alarm_clock">Buzzer Alarm Clock</string>
    <string name="alerts_sounds_dinging">Dinging</string>
    <string name="alerts_sounds_door_bell">Door Bell</string>
    <string name="alerts_sounds_fall_rate">Fall Rate</string>
    <string name="alerts_sounds_high">High</string>
    <string name="alerts_sounds_high_alert">High Alert</string>
    <string name="alerts_sounds_low">Low</string>
    <string name="alerts_sounds_low_alert">Low Alert</string>
    <string name="alerts_sounds_nerd_alert">Nerd Alert</string>
    <string name="alerts_sounds_rise_rate">Rise Rate</string>
    <string name="alerts_sounds_short_beeps">Short Beeps</string>
    <string name="alerts_sounds_signal_loss_alert">Signal Loss Alert</string>
    <string name="alerts_sounds_siren">5–0 Siren</string>
    <string name="alerts_sounds_sonar_horn">Sonar Horn</string>
    <string name="alerts_sounds_tacataca">Tacataca</string>
    <string name="alerts_sounds_truck_siren">Truck Siren</string>
    <string name="alerts_sounds_uh_oh">Uh-oh</string>
    <string name="alerts_sounds_urgent_low">Urgent Low</string>
    <string name="alerts_sounds_urgent_low_alarm">Urgent Low Alarm</string>
    <string name="alerts_sounds_urgent_low_soon">Urgent Low Soon</string>
    <string name="alerts_sounds_vibrate_only">Vibrate Only</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="average_glucose">Average Glucose</string>
    <string name="average_glucose_description">The average of all the glucose readings in the selected date range.</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="clarity_card_title">Clarity</string>
    <string name="clarity_link">Open Clarity app</string>
    <string name="clarity_link_description">Dexcom Clarity highlights your glucose patterns, trends and statistics.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_insulin">Confirm Insulin</string>
    <string name="date">Date</string>
    <string name="dexcom_logo">dexcom logo</string>
    <string name="fingerstick_or_calibration">Fingerstick or calibration</string>
    <string name="gmi">GMI</string>
    <string name="gmi_description">Glucose Management Indicator (GMI) is calculated using your average sensor glucose data. GMI can be an indicator of how well you are managing your glucose levels. Your GMI will likely differ from your A1C. Go to your product instructions for more information.</string>
    <string name="insulin">Insulin</string>
    <string name="insulin_description">Fast- or long-acting dose</string>
    <string name="insulin_type">Insulin Type</string>
    <string name="insulin_units">Insulin units</string>
    <string name="meal">Meal</string>
    <string name="meal_description">"Carbs you've eaten"</string>
    <string name="note">Note</string>
    <string name="note_description">Add information</string>
    <string name="reports_clarity_summary_disclaimer">Glucose Summary numbers may differ slightly from the numbers within Clarity</string>
    <string name="reports_target_range_target_range">Target Range</string>
    <string name="reports_target_range_very_high">Very High</string>
    <string name="reports_target_range_very_low">Very Low</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="target_range">Target Range</string>
    <string name="time">Time</string>
    <string name="time_in_range">Time in Range</string>
    <string name="time_in_range_description">The percentage of time that glucose levels are in low, target and high ranges.</string>
</resources>