<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@id/id_settings_alerts_sounds_scroll_view" android:tag="layout/fragment_sound_setting_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="40.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.appbar.AppBarLayout android:id="@id/id_sound_settings_app_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.appbar.MaterialToolbar android:id="@id/sound_settings_tool_bar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:navigationIcon="@drawable/ico_droid_arrow_bw" app:title="@string/alert_sound_cell_title" />
        </com.google.android.material.appbar.AppBarLayout>
        <TextView android:textSize="15.0dip" android:textColor="@color/dex_gray_500" android:id="@id/id_alert_sound_options_title" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.0dip" android:fontFamily="@string/roboto_regular" android:layout_marginHorizontal="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/id_sound_settings_app_bar" />
        <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioGroupView android:id="@id/id_settings_alerts_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/id_alert_sound_options_title">
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_g7" android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:chevronVisible="true" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_vibrate_only" android:tag="binding_3" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_vibrate_only" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_baby_cry" android:tag="binding_4" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_baby_cry" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_beep" android:tag="binding_5" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_beep" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_blamo_dings" android:tag="binding_6" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_blamo_dings" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_buzzer_alarm_clock" android:tag="binding_7" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_buzzer_alarm_clock" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_dinging" android:tag="binding_8" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_dinging" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_door_bell" android:tag="binding_9" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_door_bell" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_fall_rate" android:tag="binding_10" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_fall_rate" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_siren" android:tag="binding_11" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_siren" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_high_alert" android:tag="binding_12" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_high_alert" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_high" android:tag="binding_13" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_high" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_low_alert" android:tag="binding_14" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_low_alert" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_low" android:tag="binding_15" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_low" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_nerd_alert" android:tag="binding_16" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_nerd_alert" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_rise_rate" android:tag="binding_17" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_rise_rate" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_short_beeps" android:tag="binding_18" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_short_beeps" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_signal_loss_alert" android:tag="binding_19" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_signal_loss_alert" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_sonar_horn" android:tag="binding_20" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_sonar_horn" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_tacataca" android:tag="binding_21" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_tacataca" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_truck_siren" android:tag="binding_22" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_truck_siren" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_uh_oh" android:tag="binding_23" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_uh_oh" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_urgent_low_alarm" android:tag="binding_24" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_urgent_low_alarm" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_urgent_low" android:tag="binding_25" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_urgent_low" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioButtonView android:id="@id/id_settings_alerts_sounds_urgent_low_soon" android:tag="binding_26" android:layout_width="fill_parent" android:layout_height="wrap_content" app:title="@string/alerts_sounds_urgent_low_soon" />
        </com.dexcom.phoenixuikit.uikit.widget.cells.CellRadioGroupView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>