<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_add_event_dialog_0" android:background="@drawable/bg_bottom_sheet_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/header_bar" android:background="@drawable/dialog_modal_header_bar" android:layout_width="36.0dip" android:layout_height="4.0dip" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="22.0dip" android:textColor="@color/black" android:id="@id/id_add_event_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/add_event" android:fontFamily="sans-serif-medium" android:layout_marginStart="24.0dip" android:layout_marginEnd="93.0dip" android:textFontWeight="500" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/header_bar" />
    <com.dexcom.phoenixuikit.uikit.widget.cells.CellSummaryView android:id="@id/blood_glucose_container" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" app:layout_constraintTop_toBottomOf="@id/id_add_event_label" app:leadingIcon="@drawable/ic_blood_glucose_event" app:summary="@string/fingerstick_or_calibration" app:title="@string/blood_glucose" app:trailingIcon="@drawable/ico_plus_circle" app:trailingIconTint="@color/dex_green_500" />
    <com.dexcom.phoenixuikit.uikit.widget.cells.CellSummaryView android:id="@id/insulin_container" android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/blood_glucose_container" app:leadingIcon="@drawable/ico_insulin" app:summary="@string/insulin_description" app:title="@string/insulin" app:trailingIcon="@drawable/ico_plus_circle" app:trailingIconTint="@color/dex_green_500" />
    <com.dexcom.phoenixuikit.uikit.widget.cells.CellSummaryView android:id="@id/meal_container" android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/insulin_container" app:leadingIcon="@drawable/ico_bowl" app:summary="@string/meal_description" app:title="@string/meal" app:trailingIcon="@drawable/ico_plus_circle" app:trailingIconTint="@color/dex_green_500" />
    <com.dexcom.phoenixuikit.uikit.widget.cells.CellSummaryView android:id="@id/activity_container" android:tag="binding_4" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/meal_container" app:leadingIcon="@drawable/ico_activity" app:summary="@string/activity_description" app:title="@string/activity" app:trailingIcon="@drawable/ico_plus_circle" app:trailingIconTint="@color/dex_green_500" />
    <com.dexcom.phoenixuikit.uikit.widget.cells.CellSummaryView android:id="@id/note_container" android:tag="binding_5" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/activity_container" app:leadingIcon="@drawable/ico_notes" app:summary="@string/note_description" app:title="@string/note" app:trailingIcon="@drawable/ico_plus_circle" app:trailingIconTint="@color/dex_green_500" />
</androidx.constraintlayout.widget.ConstraintLayout>