<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/id_clarity_info_container" android:tag="layout/fragment_clarity_info_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:navigationIcon="@drawable/ic_close" app:title="@string/clarity_card_title" style="@style/DexcomToolbar" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="22.0dip" android:textColor="@color/black" android:id="@id/id_clarity_info_average_glucose_title_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/average_glucose" android:fontFamily="@string/roboto_medium" android:layout_marginHorizontal="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="16.0dip" android:textColor="@color/dex_gray_700" android:id="@id/id_clarity_info_average_glucose_value_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/average_glucose_description" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_average_glucose_title_label" />
            <TextView android:textSize="22.0dip" android:textColor="@color/black" android:id="@id/id_clarity_info_gmi_title_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/gmi" android:fontFamily="@string/roboto_medium" android:layout_marginHorizontal="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_average_glucose_value_label" />
            <TextView android:textSize="16.0dip" android:textColor="@color/dex_gray_700" android:id="@id/id_clarity_info_gmi_value_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/gmi_description" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_gmi_title_label" />
            <TextView android:textSize="22.0dip" android:textColor="@color/black" android:id="@id/id_clarity_info_time_in_range_title_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/time_in_range" android:fontFamily="@string/roboto_medium" android:layout_marginHorizontal="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_gmi_value_label" />
            <TextView android:textSize="16.0dip" android:textColor="@color/dex_gray_700" android:id="@id/id_clarity_info_time_in_range_value_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/time_in_range_description" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_time_in_range_title_label" />
            <TextView android:textSize="16.0dip" android:id="@id/id_clarity_info_target_range_title_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/target_range" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_time_in_range_value_label" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellSingleView android:id="@id/id_clarity_info_target_range" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_target_range_title_label" app:title="@string/reports_target_range_target_range" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellSingleView android:id="@id/id_clarity_info_very_high" android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_target_range" app:title="@string/reports_target_range_very_high" />
            <com.dexcom.phoenixuikit.uikit.widget.cells.CellSingleView android:id="@id/id_clarity_info_very_low" android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_very_high" app:title="@string/reports_target_range_very_low" />
            <ImageView android:id="@id/id_clarity_info_link_description_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_logos_clarity" android:contentDescription="@string/dexcom_logo" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="@id/id_clarity_info_link_description" app:layout_constraintEnd_toStartOf="@id/id_clarity_info_link_description" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/id_clarity_info_link_description" />
            <TextView android:textSize="16.0dip" android:id="@id/id_clarity_info_link_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/clarity_link_description" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/id_clarity_info_link_description_icon" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_very_low" />
            <TextView android:textSize="16.0dip" android:textColor="@color/dex_green_500" android:id="@id/id_clarity_info_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/clarity_link" app:layout_constraintStart_toStartOf="@id/id_clarity_info_link_description" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_link_description" />
            <TextView android:background="@drawable/bg_rounded_corners" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="16.0dip" android:text="@string/reports_clarity_summary_disclaimer" android:layout_marginHorizontal="16.0dip" android:paddingHorizontal="16.0dip" android:paddingVertical="14.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/id_clarity_info_link" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>