<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_log_insulin_confirmation_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" android:layout_marginStart="0.0dip" android:backgroundTint="@color/dex_gray_150" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:title="@string/insulin" app:titleMarginStart="0.0dip" style="@style/SensorToolbar" />
    <View android:id="@id/id_divider_1" android:background="@color/dex_gray_300" android:layout_width="fill_parent" android:layout_height="1.0dip" app:layout_constraintTop_toBottomOf="@id/toolbar" />
    <TextView android:textSize="20.0dip" android:textColor="@color/black" android:id="@id/confirm_insulin_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/confirm_insulin" android:fontFamily="@string/roboto_medium" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/id_divider_1" />
    <com.dexcom.phoenixuikit.uikit.widget.cells.CellSingleView android:id="@id/insulin_type_cell" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintTop_toBottomOf="@id/confirm_insulin_title" app:title="@string/insulin_type" />
    <com.dexcom.phoenixuikit.uikit.widget.cells.CellSingleView android:id="@id/insulin_units_cell" android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/insulin_type_cell" app:title="@string/insulin_units" />
    <com.dexcom.phoenixuikit.uikit.widget.cells.CellSingleView android:id="@id/date_cell" android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/insulin_units_cell" app:title="@string/date" />
    <com.dexcom.phoenixuikit.uikit.widget.cells.CellSingleView android:id="@id/time_cell" android:tag="binding_4" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/date_cell" app:title="@string/time" />
    <View android:id="@id/id_divider_3" android:background="@color/dex_gray_200" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginBottom="16.0dip" app:layout_constraintBottom_toTopOf="@id/id_insulin_confirm_button" app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.button.MaterialButton android:layout_gravity="bottom" android:id="@id/id_insulin_confirm_button" android:tag="binding_5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/confirm" android:layout_marginHorizontal="32.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/DexcomButton.Primary.Large" />
</androidx.constraintlayout.widget.ConstraintLayout>